changd default terminal to kitty

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -15,6 +15,7 @@
     ~/.xprofile:
     ~/.config/awesome:
     ~/.config/alacritty:
+    ~/.config/kitty:
     ~/.config/qmk:
     ~/.config/doom:
 
@@ -25,4 +26,3 @@
     ~/.config/fish/:
       path: fish/*
       glob: true
-
