--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,6 +4,7 @@ bold_font           auto
 italic_font         auto
 bold_italic_font    auto
 
+enable_audio_bell no
 allow_remote_control yes
 
 include ./theme.conf
