stop Zoom from being transparent when unfocused

--- a/awesome/configuration/picom.conf
+++ b/awesome/configuration/picom.conf
@@ -71,12 +71,13 @@ active-opacity = 1.0;
 inactive-dim = 0.0;
 
 focus-exclude = [
-	"class_g = 'Cairo-clock'",
+	"class_g ?= 'Cairo-clock'",
 	"class_g ?= 'rofi'",
 	"class_g ?= 'slop'",
-	"class_g = 'vlc'",
+	"class_g ?= 'vlc'",
 	"class_g ?= 'Steam'",
-	"class_g ?= 'vivaldi-stable'"
+	"class_g ?= 'vivaldi-stable'",
+	"name ?= 'Zoom Meeting'"
 ];
 
 # inactive-dim-fixed = 1.0;
@@ -91,7 +92,7 @@ opacity-rule = [
 
 blur: {
 	method = "dual_kawase";
-    strength = 7.0;
+    strength = 6.0;
 	deviation = 1.0;
 	kernel = "9x9gaussian";
 }
