moved picom conf out of awesome directory

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,6 +11,7 @@
 - link:
     ~/.gitconfig:
     ~/.tmux.conf:
+    ~/.config/picom.conf:
     ~/.Xresources:
     ~/.xprofile:
     ~/.config/awesome:
