--- a/picom.conf
+++ b/picom.conf
@@ -4,6 +4,14 @@
 #
 #  X compositor configuration
 
+corner-radius = 20;
+rounded-corners-exclude = [
+	"_GTK_FRAME_EXTENTS@:c",
+	"_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+	"class_g = 'awesome'"
+]
+
+
 # ░█▀▀░█░█░█▀█░█▀▄░█▀█░█░█
 # ░▀▀█░█▀█░█▀█░█░█░█░█░█▄█
 # ░▀▀▀░▀░▀░▀░▀░▀▀░░▀▀▀░▀░▀
@@ -65,7 +73,7 @@ transition-pow-h = 0.09;
 # ░▀▀▀░▀░░░▀░▀░▀▀▀░▀▀▀░░▀░░░▀░
 
 inactive-opacity = 0.85;
-frame-opacity = 1;
+frame-opacity = 1.0;
 inactive-opacity-override = false;
 active-opacity = 1.0;
 inactive-dim = 0.0;
@@ -119,7 +127,7 @@ vsync = true;
 dbus = false;
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
-detect-rounded-corners = true;
+# detect-rounded-corners = true;
 detect-client-opacity = true;
 # refresh-rate = 60;
 # use-ewmh-active-win = true;
@@ -128,8 +136,8 @@ unredir-if-possible = true;
 
 unredir-if-possible-exclude = [];
 
-detect-transient = true;
-detect-client-leader = true;
+# detect-transient = true;
+# detect-client-leader = true;
 # This should be set based on kernel size, the number of extra pixels from the centre.
 resize-damage = 4;
 
