tweaked picom conf to fix focus issues

--- a/picom.conf
+++ b/picom.conf
@@ -84,14 +84,15 @@ focus-exclude = [
 	"class_g ?= 'slop'",
 	"class_g ?= 'vlc'",
 	"class_g ?= 'Steam'",
-	"class_g ?= 'vivaldi-stable'",
-	"name ?= 'Zoom Meeting'"
 ];
 
 # inactive-dim-fixed = 1.0;
 
 opacity-rule = [ 
 	#"95:class_g = 'Alacritty'"
+	"100:class_g ?= 'vivaldi-stable'",
+	"100:class_g ?= 'Blender'",
+	"100:name ?= 'Zoom Meeting'"
 ]
 
 # ░█▀▄░█░░░█░█░█▀▄░█▀▄░▀█▀░█▀█░█▀▀
@@ -100,7 +101,7 @@ opacity-rule = [
 
 blur: {
 	method = "dual_kawase";
-    strength = 6.0;
+    strength = 4.0;
 	deviation = 1.0;
 	kernel = "9x9gaussian";
 }
@@ -173,6 +174,6 @@ wintypes: {
 	utility = { focus = false; shadow = false; blur-background = false; };
 	notification = { shadow = false; };
 	desktop = { shadow = false; blur-background = false; };
-	menu = { focus = false; };
+	menu = { fade = true; focus = false; };
 	dialog = { shadow = true; };
 };
