added discord to picom ignore transparency

--- a/picom.conf
+++ b/picom.conf
@@ -92,6 +92,7 @@ opacity-rule = [
 	#"95:class_g = 'Alacritty'"
 	"100:class_g ?= 'vivaldi-stable'",
 	"100:class_g ?= 'Blender'",
+	"100:class_g ?= 'discord'",
 	"100:name ?= 'Zoom Meeting'"
 ]
 
