--- a/picom.conf
+++ b/picom.conf
@@ -84,16 +84,18 @@ focus-exclude = [
 	"class_g ?= 'slop'",
 	"class_g ?= 'vlc'",
 	"class_g ?= 'Steam'",
+	"class_g *?= 'Blender'",
+	"class_g *?= 'gimp'"
 ];
 
 # inactive-dim-fixed = 1.0;
 
 opacity-rule = [ 
-	#"95:class_g = 'Alacritty'"
 	"100:class_g ?= 'vivaldi-stable'",
 	"100:class_g ?= 'Blender'",
 	"100:class_g ?= 'discord'",
-	"100:name ?= 'Zoom Meeting'"
+	"100:name ?= 'Zoom Meeting'",
+	"100:class_g ?= 'Bitwig Studio'"
 ]
 
 # ░█▀▄░█░░░█░█░█▀▄░█▀▄░▀█▀░█▀█░█▀▀
@@ -132,14 +134,15 @@ mark-ovredir-focused = true;
 # detect-rounded-corners = true;
 detect-client-opacity = true;
 # refresh-rate = 60;
-# use-ewmh-active-win = true;
+use-ewmh-active-win = true;
 unredir-if-possible = true;
 # unredir-if-possible-delay = 0;
 
 unredir-if-possible-exclude = [];
 
-# detect-transient = true;
-# detect-client-leader = true;
+detect-transient = true;
+detect-client-leader = true;
+
 # This should be set based on kernel size, the number of extra pixels from the centre.
 resize-damage = 4;
 
@@ -148,7 +151,7 @@ invert-color-include = [];
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
 use-damage = true;
-# xrender-sync-fence = true;
+xrender-sync-fence = true;
 
 # glx-fshader-win = "";
 # force-win-blend = false;
