Picom and xprofile changes (kvantum qt override)

--- a/picom.conf
+++ b/picom.conf
@@ -85,7 +85,8 @@ focus-exclude = [
 	"class_g ?= 'vlc'",
 	"class_g ?= 'Steam'",
 	"class_g *?= 'Blender'",
-	"class_g *?= 'gimp'"
+	"class_g *?= 'gimp'",
+	"class_g *?= 'Minecraft'"
 ];
 
 # inactive-dim-fixed = 1.0;
