Changed a whole bunch in my fish shell config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -23,6 +23,9 @@
     ~/.config/picom.conf:
     ~/.config/nvim:
     ~/.config/clangd:
+    ~/.config/ion:
+    ~/.config/starship.toml:
+    ~/.config/starship-right.toml:
 
     ~/.config/GIMP/2.10:
       path: GIMP/2.10/*
