--- a/programs/kitty/kitty.conf
+++ b/programs/kitty/kitty.conf
@@ -1,8 +1,9 @@
-font_family         Iosevka Term SS07
+font_family         Iosevka Cosmic Term 
 font_size           12.0
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
+disable_ligatures   always
 
 enable_audio_bell no
 allow_remote_control yes
