tweak awesomeWM / picom conf

--- a/config/picom.conf
+++ b/config/picom.conf
@@ -36,6 +36,7 @@ shadow-exclude = [
 	"class_g = 'vivaldi-stable' && argb",
 	"class_g = 'Rofi'",
 	"class_g = 'vlc'",
+	"class_g = 'smplayer'",
 	"_GTK_FRAME_EXTENTS@:c",
 	"_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
@@ -83,9 +84,11 @@ focus-exclude = [
 	"class_g ?= 'rofi'",
 	"class_g ?= 'slop'",
 	"class_g ?= 'vlc'",
+	"class_g ?= 'smplayer'",
 	"class_g ?= 'Steam'",
 	"class_g *?= 'Blender'",
 	"class_g *?= 'gimp'",
+	"class_g ?= 'gwenview'",
 	"class_g *?= 'Minecraft'"
 ];
 
