--- a/config/picom.conf
+++ b/config/picom.conf
@@ -99,7 +99,7 @@ opacity-rule = [
 	"100:class_g ?= 'Blender'",
 	"100:class_g ?= 'discord'",
 	"100:name ?= 'Zoom Meeting'",
-	"100:class_g ?= 'Bitwig Studio'"
+	"100:name *?= 'Bitwig Studio'"
 ]
 
 # ░█▀▄░█░░░█░█░█▀▄░█▀▄░▀█▀░█▀█░█▀▀
