--- a/config/hypr/hypr.conf
+++ b/config/hypr/hypr.conf
@@ -5,8 +5,8 @@
 
 gaps_in=5
 border_size=1
-gaps_out=20
-rounding=20
+gaps_out=10
+rounding=0
 max_fps=60 # max fps for updates of config & animations
 focus_when_hover=1 # 0 - do not switch the focus when hover (only for tiling)
 main_mod=SUPER # For moving, resizing
@@ -17,6 +17,9 @@ scratchpad_mon=0 # self-explanatory
 # Execs
 # exec-once=/home/me/MyEpicShellScript # will exec the script only when the WM launches
 # exec=/home/me/MyEpicShellScript # will exec the script every time the config is reloaded
+exec=picom --experimental-backends
+exec=feh --bg-fill Pictures/Wallpapers/links.png
+exec=polybar
 
 # Layout
 layout=0 # 0 - dwindle (default), 1 - master
@@ -26,27 +29,17 @@ layout {
 
 # Bar config
 Bar {
-    height=40
+    enabled=0
+    force_no_tray=1
+
+    height=20
     monitor=0
-    enabled=1
     mod_pad_in=8
-    no_tray_saving=1 # using this doesnt save the tray between reloads but fixes an issue with the bar disappearing.
-
-    font.main=Inter
-    font.secondary=Inter
-
-    col.bg=0xff111111
-    col.high=0xffff3333
-
-    module=left,X,0xff8000ff,0xffffffff,1,workspaces
-    module=pad,left,10
-    module=left,,0xff7000dd,0xff7000dd,1,tray
-    module=right,X,0xffffffff,0xff00ff33,1000,$date +%a,\ %b\ %Y\ \ %I:%M\ %p$
 }
 
 # colors
-col.active_border=0x77ff3333
-col.inactive_border=0x77222222
+col.active_border=0xfff0c674
+col.inactive_border=0xff222222
 
 # status command
 # deprecated
@@ -73,11 +66,12 @@ Animations {
 # windowrule=pseudo,class:discord
 
 # keybinds
-bind=SUPER,R,exec,dmenu_run
+bind=SUPER,SPACE,exec,rofi -show run
 bind=SUPER,RETURN,exec,kitty
 bind=SUPER,V,exec,vivaldi-stable
+bind=SUPER,D,exec,dolphin
 
-bind=SUPER,C,killactive,
+bind=SUPER,Q,killactive,
 
 bind=SUPERSHIFT,LEFT,movewindow,l
 bind=SUPERSHIFT,RIGHT,movewindow,r
@@ -89,32 +83,31 @@ bind=SUPER,RIGHT,movefocus,r
 bind=SUPER,UP,movefocus,u
 bind=SUPER,DOWN,movefocus,d
 
-bind=SUPER,F,fullscreen,
+bind=SUPER,F11,fullscreen
+bind=SUPER,F,togglefloating
 
-bind=SUPER,1,workspace,1
-bind=SUPER,2,workspace,2
-bind=SUPER,3,workspace,3
-bind=SUPER,4,workspace,4
-bind=SUPER,5,workspace,5
-bind=SUPER,6,workspace,6
+bind=SUPER,M,workspace,1
+bind=SUPER,PERIOD,workspace,2
+bind=SUPER,COMMA,workspace,3
+bind=SUPER,N,workspace,4
+bind=SUPER,E,workspace,5
+bind=SUPER,I,workspace,6
 bind=SUPER,7,workspace,7
 bind=SUPER,8,workspace,8
 bind=SUPER,9,workspace,9
 
-bind=SUPERSHIFT,1,movetoworkspace,1
-bind=SUPERSHIFT,2,movetoworkspace,2
-bind=SUPERSHIFT,3,movetoworkspace,3
-bind=SUPERSHIFT,4,movetoworkspace,4
-bind=SUPERSHIFT,5,movetoworkspace,5
-bind=SUPERSHIFT,6,movetoworkspace,6
+bind=SUPERSHIFT,M,movetoworkspace,1
+bind=SUPERSHIFT,PERIOD,movetoworkspace,2
+bind=SUPERSHIFT,COMMA,movetoworkspace,3
+bind=SUPERSHIFT,N,movetoworkspace,4
+bind=SUPERSHIFT,E,movetoworkspace,5
+bind=SUPERSHIFT,I,movetoworkspace,6
 bind=SUPERSHIFT,7,movetoworkspace,7
 bind=SUPERSHIFT,8,movetoworkspace,8
 bind=SUPERSHIFT,9,movetoworkspace,9
 
-bind=SUPERSHIFT,S,movetoworkspace,scratchpad
-bind=SUPER,S,scratchpad,
+bind=SUPER,S,exec,systemctl suspend
 
-bind=SUPER,SPACE,togglefloating,
 
 bind=SUPER,equals,splitratio,+
 bind=SUPER,minus,splitratio,-
