Hypr WM Adjustments.

--- a/config/hypr/hypr.conf
+++ b/config/hypr/hypr.conf
@@ -1,8 +1,3 @@
-# Hypr example config file
-# 
-#
-# =)
-
 gaps_in=5
 border_size=1
 gaps_out=10
@@ -18,8 +13,10 @@ scratchpad_mon=0 # self-explanatory
 # exec-once=/home/me/MyEpicShellScript # will exec the script only when the WM launches
 # exec=/home/me/MyEpicShellScript # will exec the script every time the config is reloaded
 exec=picom --experimental-backends
-exec=feh --bg-fill Pictures/Wallpapers/links.png
-exec=polybar
+exec=feh --bg-fill Pictures/Wallpapers/lofi_cafe.jpg
+exec=sleep 2; $HOME/.config/polybar/launch.sh
+# exec=polybar
+exec=wired
 
 # Layout
 layout=0 # 0 - dwindle (default), 1 - master
@@ -49,7 +46,7 @@ col.inactive_border=0xff222222
 # animations
 Animations {
     enabled=1
-    speed=5
+    speed=4
     cheap=1 # highly recommended
     borders=1
     workspaces=1 # not really recommended
@@ -70,6 +67,7 @@ bind=SUPER,SPACE,exec,rofi -show run
 bind=SUPER,RETURN,exec,kitty
 bind=SUPER,V,exec,vivaldi-stable
 bind=SUPER,D,exec,dolphin
+bind=SUPERSHIFT,S,exec,spectacle
 
 bind=SUPER,Q,killactive,
 
