--- a/config/picom.conf
+++ b/config/picom.conf
@@ -36,11 +36,11 @@ no-fading-destroyed-argb = true;
 # ░█░█░█▀▀░█▀█░█░░░░█░░░█░░░█░
 # ░▀▀▀░▀░░░▀░▀░▀▀▀░▀▀▀░░▀░░░▀░
 
-# inactive-opacity = 0.85;
+inactive-opacity = 0.8;
 frame-opacity = 0.9;
 inactive-opacity-override = false;
 active-opacity = 1.0;
-inactive-dim = 0.0;
+# inactive-dim = 0.0;
 # inactive-dim-fixed = 1.0;
 
 focus-exclude = [
@@ -63,8 +63,8 @@ opacity-rule = [
 	"100:class_g ?= 'discord'",
 	"100:name ?= 'Zoom Meeting'",
 	"100:name *?= 'Bitwig Studio'",
-	"85:class_g ?= 'kitty'",
-	"85:class_g ?= 'dolphin'",
+# "90:class_g ?= 'kitty'",
+# "90:class_g ?= 'dolphin'",
 ]
 
 # ░█▀▄░█░░░█░█░█▀▄░█▀▄░▀█▀░█▀█░█▀▀
@@ -98,11 +98,9 @@ daemon = false;
 backend = "glx";
 vsync = false;
 dbus = true;
-mark-wmwin-focused = true;
-mark-ovredir-focused = true;
+mark-ovredir-focused = false;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 60;
 use-ewmh-active-win = true;
 unredir-if-possible = true;
 # unredir-if-possible-delay = 0;
@@ -128,7 +126,7 @@ xrender-sync-fence = true;
 # no-ewmh-fullscreen = false;
 # max-brightness = 1.0;
 
-transparent-clipping = false;
+# transparent-clipping = true;
 
 log-level = "warn";
 log-file = "~/.cache/picom-log.log";
@@ -137,7 +135,7 @@ show-all-xerrors = true;
 
 wintypes: {
 	tooltip = { fade = true; shadow = false; focus = false; };
-	normal = { shadow = false; };
+	normal = { shadow = false;};
 	dock = { shadow = false; };
 	dnd = { shadow = false; };
 	popup_menu = { shadow = true; focus = false; opacity = 0.90; };
