--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -26,29 +26,29 @@ alert = #A54242
 disabled = #707880
 
 [bar/main]
+bottom = true
 width = 100%
 height = 30pt
 radius = 0
 
-; dpi = 192
-
 background = ${colors.background}
 foreground = ${colors.foreground}
+font-0 = Iosevka Cosmic:size=20;2
 
 line-size = 3pt
 
-border-size = 4pt
+border-top-size = 0pt
+border-bottom-size = 8pt
+border-right-size = 8pt
+border-left-size = 8pt
 border-color = #00000000
 
 padding-left = 0
 padding-right = 1
-
 module-margin = 1
 
 separator = |
 separator-foreground = ${colors.disabled}
-
-font-0 = Iosevka Cosmic:size=20;2
 
 modules-left = xworkspaces xwindow
 modules-right = filesystem memory cpu wlan eth
@@ -67,9 +67,9 @@ tray-offset-y = 0
 tray-padding = 0
 tray-scale = 1.0
 
-wm-restack = generic
+; wm-restack = generic
 ; wm-restack = bspwm
-; wm-restack = i3
+wm-restack = i3
 
 ; override-redirect = true
 
@@ -101,6 +101,7 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
+mount-1 = /mnt/data
 
 label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 
