My laptop branch, will clean all this up later.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,20 +9,10 @@
       recursive: true
 
 - link:
-    ~/:
-      glob: true
-      path: home/*
-      prefix: '.'
-
-    ~/.config/:
-      glob: true
-      path: config/**
-
     ~/.config/fish/:
       path: shell/fish/**
       glob: true
 
-    ~/.config/awesome:
-    ~/.config/boxes: resources/boxes
     ~/.config/doom:
-    ~/.config/starship.toml: shell/starship.toml
+
+    #    ~/.config/starship.toml: shell/starship.toml
