--- a/config/qmk/qmk.ini
+++ b/config/qmk/qmk.ini
@@ -2,11 +2,58 @@
 keyboard = planck/rev6
 keymap = cosmicgoat
 
+[config]
+
+[clone]
+
+[console]
+
+[env]
+
+[setup]
+
+[cformat]
+
+[compile]
+
+[docs]
+
+[flash]
+
+[format_c]
+
+[format_python]
+
+[format_text]
+
+[generate_compilation_database]
+
+[generate_develop_pr_list]
+
+[generate_dfu_header]
+
+[generate_info_json]
+
+[generate_layouts]
+
+[hello]
+
+[info]
+
+[lint]
+
+[list_keymaps]
+
+[list_layouts]
+
+[kle2json]
+
+[multibuild]
+keymap = default
+
+[new_keyboard]
+
+[new_keymap]
+
 [general]
-verbose = False
-datetime_fmt = %Y-%m-%d %H:%M:%S
-log_fmt = %(levelname)s %(message)s
-log_file_fmt = [%(levelname)s] [%(asctime)s] [file:%(pathname)s] [line:%(lineno)d] %(message)s
-log_file_level = info
-color = True
 
