--- a/shell/starship.toml
+++ b/shell/starship.toml
@@ -1,85 +1,162 @@
-# add_newline = false
+# [](#9A348E)\
 
 format = """
-[╭─ ](yellow)\
-$username\
-$hostname\
-$shlvl\
-$kubernetes\
+[ $username @ $hostname ](bg:#9A348E)\
+[](bg:#DA627D fg:#9A348E)\
 $directory\
-$vcsh\
+[](fg:#DA627D bg:#FCA17D)\
 $git_branch\
-$git_commit\
-$git_state\
 $git_status\
-$hg_branch\
-$docker_context\
-$package\
+[](fg:#FCA17D bg:#86BBD8)\
+[$c\
 $cmake\
-$dart\
+$daml\
 $deno\
 $dotnet\
 $elixir\
 $elm\
 $erlang\
+$fennel\
 $golang\
+$haskell\
 $helm\
 $java\
 $julia\
 $kotlin\
-$nim\
+$gradle\
+$lua\
 $nodejs\
-$ocaml\
+$opa\
 $perl\
-$php\
-$purescript\
 $python\
-$red\
-$ruby\
 $rust\
-$scala\
-$swift\
 $terraform\
+$vlang\
 $vagrant\
-$zig\
 $nix_shell\
 $conda\
-$lua\
-$memory_usage\
+$meson\
+$spack\
 $aws\
 $gcloud\
 $openstack\
-$env_var\
+$azure\
 $crystal\
+$jobs](bg:#86BBD8)\
+[](fg:#86BBD8 bg:#06969A)\
+$docker_context\
+[](fg:#06969A bg:#33658A)\
+$env_var\
+$memory_usage\
 $custom\
-$line_break\
-$jobs\
-$status\
-$time\
-$shell\
+$sudo\
 $cmd_duration\
+[ ](fg:#33658A)\
 $line_break\
-$character
+[▍](fg:#9A348E)\
 """
+#[╚═❯ ](fg:#9A348E)\
+#[╚═❯ ](fg:#86BBD8)\
+#[┕━❯╰─\uea9c╚═❯](fg:#86BBD8)\
 
-[character]
-format = "[╰─](yellow)$symbol "
+add_newline = true
+
+# You can also replace your username with a neat symbol like   or disable this
+# and use the os module below
+[username]
+show_always = true
+#style_user = "bg:#9A348E"
+#style_root = "bg:#9A348E"
+format = '$user'
+disabled = false
+
+# An alternative to the username module which displays a symbol that
+# represents the current operating system
+[os]
+style = "bg:#9A348E"
+disabled = true # Disabled by default
+
+[hostname]
+ssh_only = false
+style = "bold italic bg:#9A348E"
+format = "[$hostname]($style)"
+trim_at = ''
+disabled = false
 
 [directory]
-fish_style_pwd_dir_length=1
-style = "bold bright-green"
+style = "bg:#DA627D"
+format = "[ $path ]($style)"
+truncation_length = 3
+truncation_symbol = "…/"
 
-[cmd_duration]
-style = "blue"
-format = '\([$duration]($style)\) '
+# Here is how you can shorten some long paths by text replacement
+# similar to mapped_locations in Oh My Posh:
+[directory.substitutions]
+"Documents" = " "
+"Downloads" = " "
+"Music" = " "
+"Pictures" = " "
+# Keep in mind that the order matters. For example:
+# "Important Documents" = "  "
+# will not be replaced, because "Documents" was already substituted before.
+# So either put "Important Documents" before "Documents" or use the substituted version:
+# "Important  " = "  "
 
-[status]
-format = '[\[$status\]: $common_meaning]($style) '
-disabled = false
+[c]
+symbol = ""
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
 
-[memory_usage]
-disabled = false
+[docker_context]
+symbol = ""
+style = "bg:#06969A"
+format = '[ $symbol $context ]($style) $path'
 
-[gcloud]
-disabled = true
-symbol = '🇬️  '
+[elm]
+symbol = ""
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[git_branch]
+symbol = ""
+style = "bg:#FCA17D"
+format = '[ $symbol $branch ]($style)'
+
+[git_status]
+style = "bg:#FCA17D"
+format = '[$all_status$ahead_behind ]($style)'
+
+[golang]
+symbol = ""
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[gradle]
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[haskell]
+symbol = ""
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[java]
+symbol = ""
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[julia]
+symbol = ""
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[nodejs]
+symbol = ""
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[rust]
+symbol = ""
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
