--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,5 +1,5 @@
-font_family         Iosevka Cosmic Term 
-font_size           12.0
+#font_family         Iosevka Cosmic Term 
+#font_size           12.0
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
