--- a/config/alacritty.yml
+++ b/config/alacritty.yml
@@ -1,5 +1,8 @@
 font:
-   normal:
-    family: Scientifica
+  normal:
+    family: Iosevka Term SS03 # CozetteVector #Scientifica
+# family: Gohu Gohufont
     style: Regular
-   size: 9.0
+# style: Medium
+  size: 15.0
+# size: 11.0
