--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -33,7 +33,7 @@ radius = 0
 
 background = ${colors.background}
 foreground = ${colors.foreground}
-font-0 = Iosevka Cosmic:size=20;2
+font-0 = Iosevka Aile:size=20;2
 
 line-size = 3pt
 
