Update cursor setup.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,7 +12,11 @@
     ~/:
       glob: true
       path: home/*
-      prefix: '.'
+      prefix: "."
+
+    ~/.local/:
+      glob: true
+      path: local/**
 
     ~/.config/:
       glob: true
